--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
+        "tailwindcss-animate": "^1.0.7",
         "vite": "^5.0.0",
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "dayjs": "^1.11.19"
+        "chart.js": "^4.5.1",
+        "clsx": "^2.1.1",
+        "dayjs": "^1.11.19",
+        "lucide-vue-next": "^0.562.0",
+        "tailwind-merge": "^3.4.0",
+        "vue-chartjs": "^5.3.3"
     }
 }
