--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "chart.js": "^4.5.1",
         "clsx": "^2.1.1",
         "dayjs": "^1.11.19",
+        "laravel-vue-i18n": "^2.8.0",
         "lucide-vue-next": "^0.562.0",
         "tailwind-merge": "^3.4.0",
         "vue-chartjs": "^5.3.3"
